update to 4.9.9 Beta 37

--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -1,29 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="abc_action_bar_home_description">瀏覽首頁</string>
+    <string name="abc_action_bar_up_description">向上瀏覽</string>
+    <string name="abc_action_menu_overflow_description">更多選項</string>
+    <string name="abc_action_mode_done">完成</string>
+    <string name="abc_activity_chooser_view_see_all">查看全部</string>
+    <string name="abc_activitychooserview_choose_application">選擇應用程式</string>
+    <string name="abc_searchview_description_clear">清除查詢</string>
+    <string name="abc_searchview_description_query">搜尋查詢</string>
+    <string name="abc_searchview_description_search">搜尋</string>
+    <string name="abc_searchview_description_submit">送出查詢</string>
+    <string name="abc_searchview_description_voice">語音搜尋</string>
+    <string name="abc_shareactionprovider_share_with">選擇分享對象</string>
+    <string name="abc_shareactionprovider_share_with_application">與「%s」分享</string>
     <string name="about_author">作者:</string>
-    <string name="about_version">版本:</string>
-    <string name="about_sunny">陽光明媚</string>
-    <string name="about_cloudy">多雲</string>
-    <string name="about_overcast">陰天</string>
-    <string name="about_fog">霧</string>
-    <string name="about_rainstorm">暴風雨</string>
-    <string name="about_t_storms">雷雨</string>
-    <string name="about_rain_drizzle">細雨</string>
-    <string name="about_heavy_rain">大雨</string>
-    <string name="about_moderate_rain">中雨</string>
-    <string name="about_light_rain">小雨</string>
-    <string name="about_sleet">雨雪</string>
     <string name="about_blizzard">暴風雪</string>
-    <string name="about_snow_showers">陣雪</string>
-    <string name="about_heavy_snow">大雪</string>
-    <string name="about_moderate_snow">中雪</string>
-    <string name="about_light_snow">小雪</string>
+    <string name="about_cloudy">多雲</string>
     <string name="about_dust">沙塵</string>
-    <string name="about_hailstone">冰雹</string>
-    <string name="about_haze">陰霾</string>
+    <string name="about_fog">霧</string>
     <string name="about_for_translators">翻譯人員:</string>
     <string name="about_for_translators_text">如果你想幫助這個程式翻譯成您的語言，只要進入我的Github(使用上面的按鈕)及感謝道奇兔的繁化</string>
-    <string name="about_social">社群連結:</string>
+    <string name="about_graphics">圖形:</string>
+	<string name="about_hailstone">冰雹</string>
+    <string name="about_haze">陰霾</string>
+    <string name="about_heavy_rain">大雨</string>
+    <string name="about_heavy_snow">大雪</string>
+    <string name="about_light_rain">小雨</string>
+    <string name="about_light_snow">小雪</string>
+    <string name="about_moderate_rain">中雨</string>
+    <string name="about_moderate_snow">中雪</string>
+    <string name="about_overcast">陰天</string>
+    <string name="about_rain_drizzle">細雨</string>
+    <string name="about_rainstorm">暴風雨</string>
+    <string name="about_sleet">雨雪</string>
+    <string name="about_snow_showers">陣雪</string>
+    <string name="about_sunny">陽光明媚</string>
+    <string name="about_t_storms">雷雨</string>
+    <string name="about_version">版本:</string>
     <string name="action_bar_selected_format">選擇: %d</string>
     <string name="app_name">Weather BZ</string>
     <string name="applying_theme">正在套用主題u2026</string>
@@ -31,35 +44,37 @@
     <string name="btn_apply_theme">套用主題</string>
     <string name="btn_delete_location">刪除位置</string>
     <string name="cancel">取消</string>
+    <string name="changelog">變更</string>
+    <string name="changelog_full_title">更新紀錄</string>
+    <string name="changelog_ok_button">確定</string>
+    <string name="changelog_show_full">更多…</string>
+    <string name="changelog_title">"更新那些"</string>
+    <string name="changelog_version_format">版本 %s</string>
     <string name="clear_miui_data">清除MIUI天氣資料</string>
     <string name="clear_miui_data_dialog">清除MIUI天氣</string>
     <string name="clear_miui_data_dialog_ask">清除MIUI天氣供應商資料庫中的資料?</string>
     <string name="clear_miui_data_dialog_text">MIUI天氣提供商資料庫已清除!</string>
     <string name="clear_miui_data_summary">清除MIUI天氣提供商資料庫</string>
     <string name="close">關閉</string>
-    <string name="date_format_title">日期格式</string>
-    <string name="date_format_mdy">月/日/年</string>
     <string name="date_format_dmy">日/月/年</string>
+    <string name="date_format_mdy">月/日/年</string>
+    <string name="date_format_title">日期格式</string>
     <string name="dialog_color_picker">顏色選擇</string>
     <string name="donate">捐贈</string>
     <string name="donations_button_close">關閉</string>
-    <string name="donations_description">你覺得這個應用程序非常有用嗎?\n支持它的發展，或捐款給開發者!</string>
-    <string name="donations_flattr">Flattr</string>
-    <string name="donations_flattr_description">Flattr的月租費為10%!</string>
-    <string name="donations_google_android_market">Google Play Store</string>
-    <string name="donations_google_android_market_description">Google以30%的折扣每一筆捐款!</string>
-    <string name="donations_google_android_market_donate_button">捐贈!</string>
-    <string name="donations_google_android_market_not_supported">無法捐款。Google Play商店的安裝是否正確?</string>
-    <string name="donations_google_android_market_not_supported_title">不支持捐款</string>
-    <string name="donations_google_android_market_text">多少?</string>
+    <string name="donations_description">"你覺得這個應用程序非常有用嗎?
+支持它的發展，或捐款給開發者!"</string>
+	<string name="donations_item_name">捐贈給WeatherBZ</string>
     <string name="donations_paypal">PayPal</string>
-    <string name="donations_yandex">Yandex.Money</string>
+    <string name="donations_paypal_currency_code">USD</string>
     <string name="donations_paypal_description">點擊按鈕後，你可以選擇你想捐多少!</string>
-    <string name="donations_paypal_item_name">InApp Donation</string>
-    <string name="donations_thanks_dialog">謝謝您的捐贈!\n我真的很感激!</string>
+	<string name="donations_paypal_user">az.burgerz@gmail.com</string>
+    <string name="donations_thanks_dialog">"謝謝您的捐贈!
+我真的很感激!"</string>
     <string name="donations_thanks_dialog_title">謝謝!</string>
+    <string name="donations_yandex">Yandex.Money</string>
     <string name="end_time_title">結束</string>
-    <string name="fetching_location">獲取您的位置\u2026</string>
+    <string name="fetching_location">獲取您的位置…</string>
     <string name="forecast_chance_of_rain">可能有雨</string>
     <string name="forecast_chance_of_showers">降雨機率</string>
     <string name="forecast_chance_of_snow">可能有雪</string>
@@ -76,10 +91,10 @@
     <string name="forecast_fog">霧</string>
     <string name="forecast_freezing_drizzle">凍毛雨</string>
     <string name="forecast_freezing_rain">凍雨</string>
-    <string name="forecast_haze">陰霾</string>
     <string name="forecast_hail">冰雹</string>
-    <string name="forecast_hot">炎熱</string>
+    <string name="forecast_haze">陰霾</string>
     <string name="forecast_heavy_rain">大雨</string>
+    <string name="forecast_hot">炎熱</string>
     <string name="forecast_icy">冰冷</string>
     <string name="forecast_light_rain">小雨</string>
     <string name="forecast_light_snow">小雪</string>
@@ -106,9 +121,9 @@
     <string name="forecast_thunderstorms">雷暴</string>
     <string name="forecast_tornado">龍捲風</string>
     <string name="forecast_windy">有風</string>
-    <string name="changelog">變更</string>
+    <string name="ga_trackingId">UA-38673998-1</string>
     <string name="just_now">剛才</string>
-    <string name="loading">等待\u2026</string>
+    <string name="loading">等待…</string>
     <string name="location_edit">輸入城市名稱</string>
     <string name="location_gps">您現在的位置</string>
     <string name="location_list">位置</string>
@@ -125,23 +140,25 @@
     <string name="menu_trend">趨勢</string>
     <string name="menu_update">更新</string>
     <string name="moon_age">年 %s 數天</string>
-    <string name="moon_newmoon">新月</string>
-    <string name="moon_waxingcrescent">娥眉月</string>
-    <string name="moon_firstquarter">上弦月</string>
-    <string name="moon_waxinggibbous">盈凸月</string>
-    <string name="moon_full">滿月</string>
-    <string name="moon_waninggibbous">虧凸月</string>
-    <string name="moon_lastquarter">下弦月</string>
-    <string name="moon_waningcrescent">殘月</string>
     <string name="moon_current_view">查看模式: %s</string>
+    <string name="moon_firstquarter">上弦月</string>
+    <string name="moon_full">滿月</string>
     <string name="moon_illuminated">說明</string>
+    <string name="moon_lastquarter">下弦月</string>
+    <string name="moon_newmoon">新月</string>
     <string name="moon_since">自</string>
-    <string name="network_error">無法連接伺服器.\n檢查您的網絡設置.</string>
+    <string name="moon_waningcrescent">殘月</string>
+    <string name="moon_waninggibbous">虧凸月</string>
+    <string name="moon_waxingcrescent">娥眉月</string>
+    <string name="moon_waxinggibbous">盈凸月</string>
+    <string name="network_error">"無法連接伺服器.
+檢查您的網絡設置."</string>
     <string name="network_in_quiet_hours">你現在是在靜默模式狀態.更新取消.</string>
     <string name="network_in_roaming">你有設置禁止在漫遊下更新.</string>
     <string name="network_wifi_only">僅在Wi-Fi下更新.</string>
     <string name="new_version">新版本</string>
-    <string name="no_provider">位置不正確\n手動選擇位置</string>
+    <string name="no_provider">"位置不正確
+手動選擇位置"</string>
     <string name="no_weather_provider">沒有發現MIUI天氣提供商</string>
     <string name="not_now">現在不行</string>
     <string name="ok">確定</string>
@@ -153,6 +170,7 @@
     <string name="quiet_hours_enabled_off">更新後將正常的運作</string>
     <string name="quiet_hours_enabled_on">打開靜默模式</string>
     <string name="quiet_hours_title">安靜幾小時</string>
+    <string name="save_screen_shot_failed">無法保存截圖</string>
     <string name="settings_about_title">關於</string>
     <string name="settings_category_animation">動畫</string>
     <string name="settings_category_animation_sum">動畫預覽</string>
@@ -169,25 +187,29 @@
     <string name="settings_category_update_sum">設置自動更新和自動更新時間</string>
     <string name="settings_category_widgets">Widgets</string>
     <string name="settings_category_widgets_sum">Widgets的外觀和點擊動作</string>
-    <string name="settings_citydb_provider">城市提供商</string>
-    <string name="settings_click_actions">單擊動作</string>
     <string name="settings_check_updates_summary">在應用程序啟動檢查更新</string>
     <string name="settings_check_updates_title">檢查更新</string>
-    <string name="settings_colorize_weather_icons_title">著色圖標</string>
+    <string name="settings_citydb_provider">城市提供商</string>
+    <string name="settings_click_actions">單擊動作</string>
     <string name="settings_colorize_weather_icons_summary">設置圖標顏色文字顏色(除全白色的天氣圖標.)</string>
+    <string name="settings_colorize_weather_icons_title">著色圖標</string>
+    <string name="settings_expanded_notification_title">擴大通知</string>
+    <string name="settings_hide_bottom_bar_summary">觸摸螢幕隱藏底部按鈕欄</string>
+    <string name="settings_hide_bottom_bar_title">隱藏下方按鈕欄</string>
     <string name="settings_miui_support_summary">打開支持MIUI原生widgets</string>
-    <string name="settings_miui_support_title">支持MIUI widgets</string>
+	<string name="settings_miui_support_title">支持MIUI widgets</string>
     <string name="settings_miui_v5_summary">如果你是使用MIUI v5 ROM請務必打開</string>
     <string name="settings_miui_v5_title">MIUI v5 ROM</string>
     <string name="settings_moon_phases_title">月亮變化</string>
     <string name="settings_notification_color_title">狀態欄的標誌顏色</string>
+    <string name="settings_notification_hourly_view">顯示每小時的天氣</string>
     <string name="settings_notification_hourly_view_summary">顯示每小時的天氣在透視圖</string>
+    <string name="settings_notification_statusbar_summary">顯示通知在狀態欄</string>
+    <string name="settings_notification_statusbar_title">在狀態欄中通知</string>
     <string name="settings_notification_summary">在通知區域中顯示當前天氣狀況</string>
     <string name="settings_notification_text_color_summary">通知欄文字和圖標的顏色</string>
     <string name="settings_notification_title">顯示通知</string>
     <string name="settings_notification_type">通知類型</string>
-    <string name="settings_notification_statusbar_summary">顯示通知在狀態欄</string>
-    <string name="settings_notification_statusbar_title">在狀態欄中通知</string>
     <string name="settings_show_info_summary">顯示或隱藏界面</string>
     <string name="settings_show_info_title">顯示信息</string>
     <string name="settings_time_format_12h">12小時時間格式</string>
@@ -196,6 +218,8 @@
     <string name="settings_update_interval_title">更新間隔</string>
     <string name="settings_update_roaming_summary">即使在漫遊時自動更新天氣預報。注意，您的手機帳單會有一個額外的費用</string>
     <string name="settings_update_roaming_title">漫遊狀態下更新</string>
+    <string name="settings_update_show_nonet_toast_summary">顯示警告沒有連接到網路</string>
+    <string name="settings_update_show_nonet_toast_title">顯示\"沒有連接到網路\"</string>
     <string name="settings_update_wake_title">喚醒設備</string>
     <string name="settings_update_wifi_only_summary">建立Wi-Fi連接時自動更新天氣預報</string>
     <string name="settings_update_wifi_only_title">僅在Wi-Fi下更新</string>
@@ -206,10 +230,10 @@
     <string name="settings_widgets_click_date_title">點擊日期</string>
     <string name="settings_widgets_click_weather_summary">widgets啟動app時按一下預測面積(溫度)</string>
     <string name="settings_widgets_click_weather_title">點擊預報</string>
-    <string name="settings_widgets_clock_remove_leading_zero_title">刪除前導零</string>
     <string name="settings_widgets_clock_remove_leading_zero_summary">刪除時間的前導零</string>
-    <string name="settings_widgets_local_time_title">當地時間</string>
+    <string name="settings_widgets_clock_remove_leading_zero_title">刪除前導零</string>
     <string name="settings_widgets_local_time_summary">使用城市當地時間widgets</string>
+    <string name="settings_widgets_local_time_title">當地時間</string>
     <string name="settings_widgets_widget4x1">Widget 4x1</string>
     <string name="settings_widgets_widget4x1_data_title">額外訊息</string>
     <string name="settings_widgets_widget4x1_transparent_sum">未選中默認背景</string>
@@ -235,11 +259,12 @@
     <string name="settings_widgets_widget4x2_wind_font_title">風速</string>
     <string name="settings_widgets_widget4x3">Widget 4x3</string>
     <string name="settings_widgets_widget4x3_hourly_view">顯示每小時的天氣</string>
+    <string name="settings_widgets_widget_clock_font">字體(時鐘和日期)</string>
+    <string name="settings_widgets_widget_clock_font_default">預設</string>
     <string name="share">分享</string>
     <string name="share_content">\#WeatherBZ#</string>
-    <string name="share_weather_content">"\#WeatherBZ# 今天 %1$s 的天氣是 %2$s, %3$s, %4$s. 更新 %5$s."</string>
+    <string name="share_weather_content">\#WeatherBZ# 今天 %1$s 的天氣是 %2$s, %3$s, %4$s. 更新 %5$s.</string>
     <string name="share_weather_title">分享天氣數據</string>
-    <string name="save_screen_shot_failed">無法保存截圖</string>
     <string name="start_time_title">開始</string>
     <string name="temperature_units">溫度單位</string>
     <string name="temperature_units_c">攝氏</string>
@@ -250,11 +275,19 @@
     <string name="theme_import_dialog_title">選擇一個主題導入</string>
     <string name="theme_import_no_filemanager">請安裝一個文件管理器.</string>
     <string name="theme_import_not_theme">這不是一個主題檔案!</string>
+    <string name="theme_pack_temp_author">BurgerZ</string>
+    <string name="theme_pack_temp_date">21.08.2013</string>
+    <string name="theme_pack_temp_title">預設</string>
+    <string name="theme_pack_temp_version">1.0</string>
+    <string name="theme_pack_weather_author">BurgerZ</string>
+    <string name="theme_pack_weather_date">21.08.2013</string>
+    <string name="theme_pack_weather_title">預設</string>
+    <string name="theme_pack_weather_version">1.0</string>
     <string name="theme_version">"版本: "</string>
     <string name="themes_temperature_icons">溫度圖標</string>
     <string name="themes_weather_animation">天氣動畫</string>
     <string name="themes_weather_icons">天氣圖標</string>
-    <string name="updating">更新\u2026</string>
+    <string name="updating">更新…</string>
     <string name="upgrade">升級</string>
     <string name="visibility_units">能見度單位</string>
     <string name="visibility_units_km">" 公里"</string>
@@ -271,12 +304,13 @@
     <string name="weather_sunset">"日落: "</string>
     <string name="weather_visibility">"能見度: "</string>
     <string name="weather_wind">"風速: "</string>
-    <string name="widget_name_4x2">(4x2)Weather BZ</string>
-    <string name="widget_name_4x2_v5">(4x2 v5)Weather BZ</string>
     <string name="widget_name_4x1">(4x1)Weather BZ</string>
     <string name="widget_name_4x1_ext">(4x1 ext)Weather BZ</string>
     <string name="widget_name_4x1_v5">(4x1 v5)Weather BZ</string>
-    <string name="widget_text_color_summary">"Widget的文字顏色"</string>
+    <string name="widget_name_4x2">(4x2)Weather BZ</string>
+    <string name="widget_name_4x2_v5">(4x2 v5)Weather BZ</string>
+    <string name="widget_name_4x3">(4x3)Weather BZ</string>
+    <string name="widget_text_color_summary">Widget的文字顏色</string>
     <string name="wind_e">E</string>
     <string name="wind_ene">E-NE</string>
     <string name="wind_ese">E-SE</string>
@@ -298,16 +332,16 @@
     <string name="wind_w">W</string>
     <string name="wind_wnw">W-NW</string>
     <string name="wind_wsw">W-SW</string>
-    <string name="zodiac_aries">牡羊座</string>
-    <string name="zodiac_taurus">金牛座</string>
-    <string name="zodiac_gemini">雙子座</string>
-    <string name="zodiac_cancer">巨蟹座</string>
-    <string name="zodiac_leo">獅子座</string>
-    <string name="zodiac_virgo">處女座</string>
-    <string name="zodiac_libra">天秤座</string>
-    <string name="zodiac_scorpio">天蠍座</string>
-    <string name="zodiac_sagittarius">射手座</string>
-    <string name="zodiac_capricorn">摩羯座</string>
     <string name="zodiac_aquarius">水瓶座</string>
+    <string name="zodiac_aries">牡羊座</string>
+    <string name="zodiac_cancer">巨蟹座</string>
+    <string name="zodiac_capricorn">摩羯座</string>
+    <string name="zodiac_gemini">雙子座</string>
+    <string name="zodiac_leo">獅子座</string>
+    <string name="zodiac_libra">天秤座</string>
     <string name="zodiac_pisces">雙魚座</string>
+    <string name="zodiac_sagittarius">射手座</string>
+    <string name="zodiac_scorpio">天蠍座</string>
+    <string name="zodiac_taurus">金牛座</string>
+    <string name="zodiac_virgo">處女座</string>
 </resources>
