French: update, sort, typos, non-breaking space

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1,70 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
- <!-- to be translated :
-	<string name="abc_action_mode_done">Done</string>
+<!-- to be translated :
 	<string name="abc_action_bar_home_description">Navigate home</string>
 	<string name="abc_action_bar_up_description">Navigate up</string>
-	<string name="abc_action_menu_overflow_description">More options</string>
-	<string name="abc_searchview_description_search">Search</string>
-	<string name="abc_searchview_description_query">Search query</string>
 	<string name="abc_searchview_description_clear">Clear query</string>
+	<string name="abc_searchview_description_query">Search query</string>
+	<string name="abc_searchview_description_search">Search</string>
 	<string name="abc_searchview_description_submit">Submit query</string>
 	<string name="abc_searchview_description_voice">Voice search</string>
-	<string name="abc_activitychooserview_choose_application">Choose an app</string>
-	<string name="abc_activity_chooser_view_see_all">See all</string>
-	<string name="abc_shareactionprovider_share_with_application">Share with %s</string>
-	<string name="abc_shareactionprovider_share_with">Share with</string>
-	<string name="donations_item_name">WeatherBZ Donation</string>
- -->
-	<string name="about_author">Auteur :</string>
+-->
+	<string name="abc_action_menu_overflow_description">Plus d\'options</string>
+	<string name="abc_action_mode_done">OK</string>
+	<string name="abc_activity_chooser_view_see_all">Tout afficher</string>
+	<string name="abc_activitychooserview_choose_application">Sélectionnez une application</string>
+	<string name="abc_shareactionprovider_share_with">Partager avec</string>
+	<string name="abc_shareactionprovider_share_with_application">Partager avec %s</string>
+	<string name="about_author">Auteur :</string>
 	<string name="about_blizzard">Tempête de neige</string>
 	<string name="about_cloudy">Nuageux</string>
 	<string name="about_dust">Tempête de poussière</string>
 	<string name="about_fog">Brouillard</string>
-	<string name="about_for_translators_text">Si vous souhaitez traduire cette application, rendez-vous sur GitHub (lien ci-dessus) !</string>
-	<string name="about_for_translators">Traductions :</string>
+	<string name="about_for_translators">Traductions :</string>
+	<string name="about_for_translators_text">Si vous souhaitez traduire cette application, rendez-vous sur GitHub (lien ci-dessus) !</string>
+	<string name="about_graphics">Graphismes :</string>
 	<string name="about_hailstone">Grêle</string>
 	<string name="about_haze">Brume</string>
-	<string name="about_heavy_snow">Grosse chute de neige</string>
 	<string name="about_heavy_rain">Pluie battante</string>
+	<string name="about_heavy_snow">Grosse chute de neige</string>
 	<string name="about_light_rain">Pluie fine</string>
 	<string name="about_light_snow">Neige légère</string>
 	<string name="about_moderate_rain">Pluie modérée</string>
 	<string name="about_moderate_snow">Neige modérée</string>
 	<string name="about_overcast">Nuages épars</string>
-	<string name="about_rainstorm">Pluie torrentielle</string>
 	<string name="about_rain_drizzle">Averse</string>
+	<string name="about_rainstorm">Pluie torrentielle</string>
 	<string name="about_sleet">Grésil</string>
 	<string name="about_snow_showers">Averses de neige</string>
-	<string name="about_social">Liens sociaux :</string>
 	<string name="about_sunny">Ciel dégagé</string>
 	<string name="about_t_storms">Orage</string>
-	<string name="about_version">Version :</string>
-	<string name="action_bar_selected_format">Sélectionné : %d</string>
+	<string name="about_version">Version :</string>
+	<string name="action_bar_selected_format">Sélectionné : %d</string>
 	<string name="app_name">Météo</string>
 	<string name="applying_theme">Application du thème\u2026</string>
 	<string name="btn_add_location">Ajouter</string>
 	<string name="btn_apply_theme">Appliquer</string>
 	<string name="btn_delete_location">Supprimer</string>
 	<string name="cancel">Annuler</string>
-	<string name="changelog">Dernières mises à jour</string>
+	<string name="changelog">Changelog</string>
+	<string name="changelog_full_title">Dernières modifications</string>
+	<string name="changelog_ok_button">OK</string>
+	<string name="changelog_show_full">Plus…</string>
+	<string name="changelog_title">Nouveautés</string>
+	<string name="changelog_version_format">Version %s</string>
 	<string name="clear_miui_data">Vider le cache météo</string>
-	<string name="clear_miui_data_dialog_ask">"Les données de l'application météo native de MIUI vont être effacées."</string>
-	<string name="clear_miui_data_dialog_text">"Les données de l'application météo native de MIUI ont été effacées avec succès !"</string>
 	<string name="clear_miui_data_dialog">Nettoyage du cache météo</string>
+	<string name="clear_miui_data_dialog_ask">"Les données de l'application météo native de MIUI vont être effacées."</string>
+	<string name="clear_miui_data_dialog_text">"Les données de l'application météo native de MIUI ont été effacées avec succès !"</string>
 	<string name="clear_miui_data_summary">"Effacer les données de l'application météo native de MIUI"</string>
 	<string name="close">Fermer</string>
-	<string name="date_format_title">Format de la date</string>	
-	<string name="date_format_mdy">MM/dd/yyyy</string>
 	<string name="date_format_dmy">dd/MM/yyyy</string>
+	<string name="date_format_mdy">MM/dd/yyyy</string>
+	<string name="date_format_title">Format de la date</string>
 	<string name="dialog_color_picker">Choix de la couleur</string>
 	<string name="donate">Faire un don</string>
 	<string name="donations_button_close">Fermer</string>
-	<string name="donations_description">Vous trouvez cette application utile ?\nVous pouvez supporter son développement sur Flattr ou en envoyant des dons via le Google Play Store .</string>
+	<string name="donations_description">Vous trouvez cette application utile ?\nVous pouvez supporter son développement sur Flattr ou en envoyant des dons via le Google Play Store .</string>
 	<string name="donations_paypal">PayPal</string>
 	<string name="donations_paypal_description">Vous pouvez faire un don du montant désiré en cliquant sur le bouton ci-dessous.</string>
-	<string name="donations_thanks_dialog">Merci beaucoup pour votre don !</string>
-	<string name="donations_thanks_dialog_title">Merci !</string>
+	<string name="donations_thanks_dialog">Merci beaucoup pour votre don !</string>
+	<string name="donations_thanks_dialog_title">Merci !</string>
 	<string name="donations_yandex">Yandex.Money</string>
 	<string name="end_time_title">Fin</string>
 	<string name="fetching_location">Géolocalisation…</string>
@@ -111,7 +115,7 @@
 	<string name="forecast_snow_storm">Tempête de neige</string>
 	<string name="forecast_sunny">Ensoleillé</string>
 	<string name="forecast_thunderstorm">Orage</string>
-	<string name="forecast_thunderstorms">Orages</string>	
+	<string name="forecast_thunderstorms">Orages</string>
 	<string name="forecast_tornado">Tornade</string>
 	<string name="forecast_windy">Tempête</string>
 	<string name="just_now">"A l'instant"</string>
@@ -131,18 +135,18 @@
 	<string name="menu_themes">Thèmes</string>
 	<string name="menu_trend">Tendance</string>
 	<string name="menu_update">Mise à jour</string>
-	<string name="moon_age">Age : %s jours</string>
-	<string name="moon_newmoon">Nouvelle lune</string>
-	<string name="moon_waxingcrescent">Premier croissant</string>
+	<string name="moon_age">Age : %s jours</string>
+	<string name="moon_current_view">Mode de vue : %s</string>
 	<string name="moon_firstquarter">Premier quartier</string>
-	<string name="moon_waxinggibbous">Lune gibbeuse croissante</string>
 	<string name="moon_full">Pleine lune</string>
-	<string name="moon_waninggibbous">Lune gibbeuse décroissante</string>
-	<string name="moon_lastquarter">Dernier quartier</string>
-	<string name="moon_waningcrescent">Dernier croissant</string>
-	<string name="moon_current_view">Mode de vue : %s</string>
 	<string name="moon_illuminated">Illuminée à</string>
+	<string name="moon_lastquarter">Dernier quartier</string>
+	<string name="moon_newmoon">Nouvelle lune</string>
 	<string name="moon_since">Depuis le</string>
+	<string name="moon_waningcrescent">Dernier croissant</string>
+	<string name="moon_waninggibbous">Lune gibbeuse décroissante</string>
+	<string name="moon_waxingcrescent">Premier croissant</string>
+	<string name="moon_waxinggibbous">Lune gibbeuse croissante</string>
 	<string name="network_error">Impossible de se connecter au serveur\nVérifiez vos paramètres réseau</string>
 	<string name="network_in_quiet_hours">Vous êtes en heures de repos. Mises à jour annulées.</string>
 	<string name="network_in_roaming">Vous avez des paramètres pour désactiver les mises à jour en itinérance.</string>
@@ -160,6 +164,7 @@
 	<string name="quiet_hours_enabled_off">Mises à jour activées à toute heure de la journée</string>
 	<string name="quiet_hours_enabled_on">Mises à jour désactivées sur la plage horaire définie ci-dessous</string>
 	<string name="quiet_hours_title">Plages horaires des mises à jour</string>
+	<string name="save_screen_shot_failed">"Impossible de sauver le capture d'écran"</string>
 	<string name="settings_about_title">À propos</string>
 	<string name="settings_category_animation">Animations</string>
 	<string name="settings_category_animation_sum"></string>
@@ -176,12 +181,15 @@
 	<string name="settings_category_update_sum"></string>
 	<string name="settings_category_widgets">Widgets</string>
 	<string name="settings_category_widgets_sum"></string>
-	<string name="settings_citydb_provider">Fournisseur ville</string>
 	<string name="settings_check_updates_summary">"Vérifier automatiquement les mises à jour de l'application au démarrage de celle-ci"</string>
 	<string name="settings_check_updates_title">Vérifier les mises à jour</string>
+	<string name="settings_citydb_provider">Fournisseur ville</string>
 	<string name="settings_click_actions">Actions sur clics</string>
-	<string name="settings_colorize_weather_icons_title">Colorier les icônes</string>
 	<string name="settings_colorize_weather_icons_summary">Utiliser la couleur du texte pour les icônes(pour les icônes météo blancs par ex.)</string>
+	<string name="settings_colorize_weather_icons_title">Colorier les icônes</string>
+	<string name="settings_expanded_notification_title">Notification étendu</string>
+	<string name="settings_hide_bottom_bar_summary">Toucher l\'écran masquera la barre contenant les boutons</string>
+	<string name="settings_hide_bottom_bar_title">Masquer la barre inférieure</string>
 	<string name="settings_miui_support_summary">"Activer la prise en charge de l'icône dynamique de l'application (à condition que l'icône ait été installée par ailleurs)"</string>
 	<string name="settings_miui_support_title">"Activer l'icône dynamique"</string>
 	<string name="settings_miui_v5_summary">Activer si le système tourne sous la ROM MIUI v5</string>
@@ -190,12 +198,12 @@
 	<string name="settings_notification_color_title">"Couleur dans la barre d'état"</string>
 	<string name="settings_notification_hourly_view">Prévisions heure par heure</string>
 	<string name="settings_notification_hourly_view_summary">Affiche les prévisions heure par heure en vue étendue</string>
+	<string name="settings_notification_statusbar_summary">"Affiche une notification dans la barre d'état"</string>
+	<string name="settings_notification_statusbar_title">"Notification dans la barre d'état"</string>
 	<string name="settings_notification_summary">Afficher la météo actuelle dans les notifications</string>
 	<string name="settings_notification_text_color_summary">"Couleur du texte et de l'icône"</string>
 	<string name="settings_notification_title">Activer les notifications</string>
 	<string name="settings_notification_type">Type de notification</string>
-	<string name="settings_notification_statusbar_summary">"Affiche une notification dans la barre d'état"</string>
-	<string name="settings_notification_statusbar_title">"Notification dans la barre d'état"</string>
 	<string name="settings_show_info_summary">Sélectionner les informations à afficher</string>
 	<string name="settings_show_info_title">Informations à afficher</string>
 	<string name="settings_time_format_12h">Heure au format 12h</string>
@@ -203,7 +211,9 @@
 	<string name="settings_update_autoupdate_title">Mettre à jour automatiquement</string>
 	<string name="settings_update_interval_title">Fréquence des mises à jour</string>
 	<string name="settings_update_roaming_summary">Mettre à jour les prévisions météorologiques à tout moment (des frais supplémentaires liés à la consommation de données peuvent être facturés)</string>
-	<string name="settings_update_roaming_title">Mettre à jour via les données</string>
+	<string name="settings_update_roaming_title">Mettre à jour via le réseau mobile</string>
+	<string name="settings_update_show_nonet_toast_summary">Affiche un pop-up lorsqu\'aucune connexion n\'est disponible</string>
+	<string name="settings_update_show_nonet_toast_title">Afficher pop-up \"Aucun réseau\"</string>
 	<string name="settings_update_wake_title">"Réveiller l'appareil"</string>
 	<string name="settings_update_wifi_only_summary">Mettre à jour automatiquement les prévisions météorologiques seulement si une connexion Wi-Fi est active</string>
 	<string name="settings_update_wifi_only_title">Mettre à jour via Wi-Fi uniquement</string>
@@ -214,10 +224,10 @@
 	<string name="settings_widgets_click_date_title">Clic sur la date</string>
 	<string name="settings_widgets_click_weather_summary">"Choisir l'application à lancer en cliquant sur la zone météo du widget"</string>
 	<string name="settings_widgets_click_weather_title">Clic sur la météo</string>
-	<string name="settings_widgets_clock_remove_leading_zero_title">Retirer un zéro</string>
 	<string name="settings_widgets_clock_remove_leading_zero_summary">Supprime le zéro des heures</string>
+	<string name="settings_widgets_clock_remove_leading_zero_title">Retirer un zéro</string>
+	<string name="settings_widgets_local_time_summary">"Utiliser l'heure locale de la ville dans les widgets"</string>
 	<string name="settings_widgets_local_time_title">Heure locale</string>
-	<string name="settings_widgets_local_time_summary">"Utiliser l'heure locale de la ville dans les widgets"</string>	
 	<string name="settings_widgets_widget4x1">Widget 4x1</string>
 	<string name="settings_widgets_widget4x1_data_title">Prévisions météorologiques</string>
 	<string name="settings_widgets_widget4x1_transparent_sum">Arrière plan par défaut si option désactivée</string>
@@ -243,22 +253,25 @@
 	<string name="settings_widgets_widget4x2_wind_font_title">Vent</string>
 	<string name="settings_widgets_widget4x3">Widget 4x3</string>
 	<string name="settings_widgets_widget4x3_hourly_view">Météo heure par heure</string>
+	<string name="settings_widgets_widget_clock_font">Police (heure et date)</string>
+	<string name="settings_widgets_widget_clock_font_default">Par défaut</string>
 	<string name="share">Partager</string>
 	<string name="share_content">\#WeatherBZ#</string>
-	<string name="share_weather_content">"\#WeatherBZ# Aujourd'hui à %1$s la météo est : %2$s, %3$s, %4$s. Mis à jour à %5$s."</string>
+	<string name="share_weather_content">"\#WeatherBZ# Aujourd'hui à %1$s la météo est : %2$s, %3$s, %4$s. (%5$s)"</string>
 	<string name="share_weather_title">Partager les données météo</string>
-	<string name="save_screen_shot_failed">"Impossible de sauver le capture d'écran"</string>
 	<string name="start_time_title">Début</string>
 	<string name="temperature_units">Unité de température</string>
 	<string name="temperature_units_c">Celsius</string>
 	<string name="temperature_units_f">Fahrenheit</string>
 	<string name="text_color_title">Couleur</string>
-	<string name="theme_author">"Auteur : "</string>
-	<string name="theme_date">"Date : "</string>
+	<string name="theme_author">"Auteur : "</string>
+	<string name="theme_date">"Date : "</string>
 	<string name="theme_import_dialog_title">Sélectionnez un thème à importer</string>
 	<string name="theme_import_no_filemanager">Veuillez installer un gestionnaire de fichiers.</string>
 	<string name="theme_import_not_theme">"Ce n'est pas un fichier de thème!"</string>
-	<string name="theme_version">"Version : "</string>
+	<string name="theme_pack_temp_title">Par défaut</string>
+	<string name="theme_pack_weather_title">Par défaut</string>
+	<string name="theme_version">"Version : "</string>
 	<string name="themes_temperature_icons">Icônes température</string>
 	<string name="themes_weather_animation">Animations météo</string>
 	<string name="themes_weather_icons">Icônes météo</string>
@@ -268,23 +281,23 @@
 	<string name="visibility_units_km">" km"</string>
 	<string name="visibility_units_m">" m"</string>
 	<string name="visibility_units_mi">" miles"</string>
-	<string name="weather_feel">"Ressenti : "</string>
+	<string name="weather_feel">"Ressenti : "</string>
 	<string name="weather_forecast_empty">--</string>
-	<string name="weather_humidity">"Humidité : "</string>
+	<string name="weather_humidity">"Humidité : "</string>
 	<string name="weather_no_city">Aucune ville</string>
 	<string name="weather_no_data">Aucune donnée météo</string>
 	<string name="weather_no_temp_data">-°</string>
-	<string name="weather_pressure">"Pression : "</string>
-	<string name="weather_sunrize">"Lever : "</string>
-	<string name="weather_sunset">"Coucher : "</string>
-	<string name="weather_visibility">"Visibilité : "</string>
-	<string name="weather_wind">"Vent : "</string>
-	<string name="widget_name_4x3">Météo 4x3</string>
-	<string name="widget_name_4x2">Météo 4x2</string>
-	<string name="widget_name_4x2_v5">Météo 4x2(v5)</string>
+	<string name="weather_pressure">"Pression : "</string>
+	<string name="weather_sunrize">"Lever : "</string>
+	<string name="weather_sunset">"Coucher : "</string>
+	<string name="weather_visibility">"Visibilité : "</string>
+	<string name="weather_wind">"Vent : "</string>
 	<string name="widget_name_4x1">Météo 4x1</string>
 	<string name="widget_name_4x1_ext">Météo 4x1(ext)</string>
 	<string name="widget_name_4x1_v5">Météo 4x1(v5)</string>
+	<string name="widget_name_4x2">Météo 4x2</string>
+	<string name="widget_name_4x2_v5">Météo 4x2(v5)</string>
+	<string name="widget_name_4x3">Météo 4x3</string>
 	<string name="widget_text_color_summary">Couleur du texte</string>
 	<string name="wind_e">E</string>
 	<string name="wind_ene">E-NE</string>
@@ -307,16 +320,16 @@
 	<string name="wind_w">O</string>
 	<string name="wind_wnw">O-NO</string>
 	<string name="wind_wsw">O-SO</string>
-	<string name="zodiac_aries">Bélier</string>
-	<string name="zodiac_taurus">Taureau</string>
-	<string name="zodiac_gemini">Gémeaux</string>
-	<string name="zodiac_cancer">Cancer</string>
-	<string name="zodiac_leo">Lion</string>
-	<string name="zodiac_virgo">Vierge</string>
-	<string name="zodiac_libra">Balance</string>
-	<string name="zodiac_scorpio">Scorpion</string>
-	<string name="zodiac_sagittarius">Sagittaire</string>
-	<string name="zodiac_capricorn">Capricorne</string>
 	<string name="zodiac_aquarius">Verseau</string>
+	<string name="zodiac_aries">Bélier</string>
+	<string name="zodiac_cancer">Cancer</string>
+	<string name="zodiac_capricorn">Capricorne</string>
+	<string name="zodiac_gemini">Gémeaux</string>
+	<string name="zodiac_leo">Lion</string>
+	<string name="zodiac_libra">Balance</string>
 	<string name="zodiac_pisces">Poissons</string>
+	<string name="zodiac_sagittarius">Sagittaire</string>
+	<string name="zodiac_scorpio">Scorpion</string>
+	<string name="zodiac_taurus">Taureau</string>
+	<string name="zodiac_virgo">Vierge</string>
 </resources>
